--- a/user-management-backend/.env.example
+++ b/user-management-backend/.env.example
@@ -1,25 +1,32 @@
+# User Management Backend Configuration
+# Copy this file to .env and update the values
+
 # Database Configuration
-DATABASE_URL=postgresql://postgres:postgres@localhost:5432/user_management
+DATABASE_URL=mongodb://localhost:27017/user_management_db
+MONGODB_URL=mongodb://localhost:27017
+MONGODB_DB_NAME=user_management_db
 REDIS_URL=redis://localhost:6379
 
 # JWT Configuration
-JWT_SECRET_KEY=your-super-secret-jwt-key-change-in-production
+JWT_SECRET_KEY=your-super-secret-jwt-key-change-this-in-production
 JWT_ALGORITHM=HS256
-ACCESS_TOKEN_EXPIRE_MINUTES=30
-REFRESH_TOKEN_EXPIRE_DAYS=7
-
-# Stripe Configuration
-STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key
-STRIPE_PUBLISHABLE_KEY=pk_test_your_stripe_publishable_key
-STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret
+JWT_ACCESS_TOKEN_EXPIRE_MINUTES=30
+JWT_REFRESH_TOKEN_EXPIRE_DAYS=7
 
 # Application Configuration
 APP_NAME=User Management Backend
 DEBUG=True
-API_V1_STR=/api
+BACKEND_CORS_ORIGINS=["http://localhost:3000", "http://localhost:8080", "http://localhost:8000"]
 
-# CORS Configuration
-BACKEND_CORS_ORIGINS=["http://localhost:3000", "http://localhost:8080"]
+# A4F Integration Configuration
+A4F_API_KEY=your-a4f-api-key-here
+A4F_BASE_URL=https://api.a4f.com/v1
 
-# OAuth Providers
-OAUTH_PROVIDERS=["openrouter", "glama", "requesty"]
+# Server Configuration
+HOST=0.0.0.0
+PORT=8000
+
+# Optional: Stripe Configuration (for payments)
+STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key
+STRIPE_PUBLISHABLE_KEY=pk_test_your_stripe_publishable_key
+STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret
