--- a/user-management-backend/requirements.txt
+++ b/user-management-backend/requirements.txt
@@ -1,1 +1,12 @@
-fastapi>=0.104.0\nuvicorn[standard]>=0.24.0\nmotor>=3.3.0\nbeanie>=1.24.0\nbcrypt>=4.1.0\nPyJWT>=2.8.0\npython-multipart>=0.0.6\npython-dotenv>=1.0.0\nhttpx>=0.25.0\npydantic[email]>=2.5.0\npymongo>=4.6.0
+fastapi>=0.104.0
+uvicorn[standard]>=0.24.0
+motor>=3.3.0
+beanie>=1.24.0
+bcrypt>=4.1.0
+PyJWT>=2.8.0
+python-multipart>=0.0.6
+python-dotenv>=1.0.0
+httpx>=0.25.0
+pydantic[email]>=2.5.0
+pymongo>=4.6.0
+razorpay>=1.3.0
