--- a/user-management-backend/Dockerfile
+++ b/user-management-backend/Dockerfile
@@ -1,33 +1,20 @@
-# Use Python 3.11 slim image
-FROM python:3.11-slim
+# Use a slim Python base image for smaller size
+FROM python:3.12-slim-buster
 
-# Set working directory
+# Set the working directory in the container
 WORKDIR /app
 
-# Install system dependencies
-RUN apt-get update && apt-get install -y \
-    gcc \
-    && rm -rf /var/lib/apt/lists/*
-
-# Copy requirements first for better caching
+# Copy the requirements file and install dependencies
+# This step is cached if requirements.txt doesn't change
 COPY requirements.txt .
-
-# Install Python dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy application code
+# Copy the rest of your application code
 COPY . .
 
-# Create non-root user for security
-RUN useradd --create-home --shell /bin/bash app && chown -R app:app /app
-USER app
-
-# Expose port
+# Expose the port your FastAPI application will listen on
 EXPOSE 8000
 
-# Health check
-HEALTHCHECK --interval=30s --timeout=30s --start-period=5s --retries=3 \
-    CMD python -c "import requests; requests.get('http://localhost:8000/health')"
 
 # Run the application
 CMD ["uvicorn", "minimal_auth_server:app", "--host", "0.0.0.0", "--port", "8000"]
