--- a/user-management-backend/docker-compose.yml
+++ b/user-management-backend/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.8'
 services:
   # User Management Backend API
   api:
-    image: user-management-api:latest
+    build: .
     ports:
       - "8000:8000"
     environment:
