--- a/user-management-backend/Dockerfile
+++ b/user-management-backend/Dockerfile
@@ -7,6 +7,7 @@ WORKDIR /app
 # Copy the requirements file and install dependencies
 # This step is cached if requirements.txt doesn't change
 COPY requirements.txt .
+RUN pip install --no-cache-dir --upgrade pip setuptools wheel
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy the rest of your application code
