--- a/user-management-backend/requirements.txt
+++ b/user-management-backend/requirements.txt
@@ -8,6 +8,7 @@ python-multipart>=0.0.6
 python-dotenv>=1.0.0
 httpx>=0.25.0
 pydantic[email]>=2.5.0
+pydantic-settings>=2.0.0
 pymongo>=4.6.0
 razorpay>=1.3.0
 setuptools>=68.0.0
