--- a/user-management-backend/requirements.txt
+++ b/user-management-backend/requirements.txt
@@ -11,4 +11,7 @@ pydantic[email]>=2.5.0
 pydantic-settings>=2.0.0
 pymongo>=4.6.0
 razorpay>=1.3.0
+redis>=4.5.0
+stripe>=5.0.0
+passlib[bcrypt]>=1.7.4
 setuptools>=68.0.0
