--- a/user-management-backend/api.yml
+++ b/user-management-backend/api.yml
@@ -21,7 +21,7 @@ spec:
         - containerPort: 8000
         env:
         - name: DATABASE_URL
-          value: "mongodb://mongodb-service:27017/user_management_db"
+          value: "mongodb+srv://autogencodebuilder:DataOnline@autogen.jf0j0.mongodb.net/user_management_db?retryWrites=true&w=majority&connectTimeoutMS=60000&socketTimeoutMS=60000"
         - name: JWT_SECRET_KEY
           valueFrom:
             secretKeyRef:
