Fix YAML syntax error in AWS workflow: Update heredoc delimiter and indentation

--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -106,11 +106,11 @@ jobs:
           else
             echo "⚠️ .env.production file not found, creating one..."
             # Create basic .env.production if it doesn't exist
-            cat > .env.production << 'ENV_EOF'
-DATABASE_URL=mongodb+srv://autogencodebuilder:DataOnline@autogen.jf0j0.mongodb.net/user_management_db?retryWrites=true&w=majority&connectTimeoutMS=60000&socketTimeoutMS=60000
-PORT=8001
-ENVIRONMENT=production
-ENV_EOF
+            cat > .env.production << 'ENVEOF'
+          DATABASE_URL=mongodb+srv://autogencodebuilder:DataOnline@autogen.jf0j0.mongodb.net/user_management_db?retryWrites=true&w=majority&connectTimeoutMS=60000&socketTimeoutMS=60000
+          PORT=8001
+          ENVIRONMENT=production
+          ENVEOF
           fi
           
           # Create virtual environment if it doesn't exist
