--- a/user-management-backend/requirements.txt
+++ b/user-management-backend/requirements.txt
@@ -1,19 +1,203 @@
-fastapi>=0.104.0
-uvicorn[standard]>=0.24.0
-motor>=3.3.0
-beanie>=1.24.0
-bcrypt>=4.1.0
-PyJWT>=2.8.0
-python-multipart>=0.0.6
-python-dotenv>=1.0.0
-httpx>=0.25.0
-pydantic[email]>=2.5.0
-pydantic-settings>=2.0.0
-pymongo>=4.6.0
-razorpay>=1.3.0
-redis>=4.5.0
-stripe>=5.0.0
-passlib[bcrypt]>=1.7.4
-setuptools>=68.0.0
-sqlalchemy>=2.0.0
-alembic>=1.13.0
+aiofiles==23.2.1
+alembic==1.13.1
+annotated-types==0.7.0
+anyio==4.10.0
+apturl==0.5.2
+asyncpg==0.29.0
+attrs==21.2.0
+Authlib==1.6.4
+autokey==0.95.10
+awscli==1.22.34
+bandit==1.7.7
+bcrypt==5.0.0
+beanie==2.0.0
+black==24.1.1
+blinker==1.4
+boto3==1.34.34
+boto3-stubs==1.40.2
+botocore==1.34.34
+botocore-stubs==1.38.46
+Brlapi==0.8.3
+certifi==2020.6.20
+cffi==1.17.1
+chardet==4.0.0
+charset-normalizer==3.4.2
+click==8.0.3
+colorama==0.4.4
+colorlog==6.9.0
+command-not-found==0.3
+coverage==7.10.2
+cryptography==42.0.2
+cupshelpers==1.0
+dbus-python==1.2.18
+defer==1.0.6
+Deprecated==1.2.18
+distro==1.7.0
+distro-info==1.1+ubuntu0.2
+dnspython==2.7.0
+docker==5.0.3
+docker-compose==1.29.2
+dockerpty==0.4.1
+docopt==0.6.2
+docutils==0.17.1
+duplicity==0.8.21
+ecdsa==0.19.1
+email-validator==2.1.0
+execnet==2.1.1
+Faker==37.5.3
+fastapi==0.109.2
+fasteners==0.14.1
+flake8==7.0.0
+future==0.18.2
+greenlet==3.2.3
+gyp==0.1
+h11==0.16.0
+httpcore==1.0.9
+httplib2==0.20.2
+httptools==0.6.4
+httpx==0.28.1
+idna==3.3
+importlib-metadata==4.6.4
+iniconfig==2.1.0
+isort==5.13.2
+itsdangerous==2.2.0
+jeepney==0.7.1
+jmespath==0.10.0
+joblib==1.5.1
+jsonschema==3.2.0
+keyring==23.5.0
+language-selector==0.1
+launchpadlib==1.10.16
+lazr.restfulclient==0.14.4
+lazr.uri==1.0.6
+lazy-model==0.3.0
+limits==5.4.0
+lockfile==0.12.2
+louis==3.20.0
+macaroonbakery==1.3.1
+Mako==1.1.3
+Markdown==3.5.2
+markdown-it-py==3.0.0
+MarkupSafe==2.0.1
+mccabe==0.7.0
+mdurl==0.1.2
+mdx-truly-sane-lists==1.3
+monotonic==1.6
+more-itertools==8.10.0
+motor==3.7.1
+MouseInfo==0.1.3
+mypy==1.8.0
+mypy_extensions==1.1.0
+netifaces==0.11.0
+numpy==1.26.4
+oauthlib==3.2.0
+olefile==0.46
+packaging==25.0
+pandas==2.2.0
+paramiko==2.9.3
+passlib==1.7.4
+pathspec==0.12.1
+pbr==6.1.1
+pexpect==4.8.0
+Pillow==9.0.1
+platformdirs==4.3.8
+pluggy==1.6.0
+prometheus-client==0.19.0
+protobuf==3.12.4
+psutil==5.9.8
+psycopg2-binary==2.9.9
+ptyprocess==0.7.0
+pyasn1==0.4.8
+PyAutoGUI==0.9.54
+pycairo==1.20.1
+pycodestyle==2.11.1
+pycparser==2.22
+pycups==2.0.1
+pydantic==2.6.1
+pydantic-settings==2.2.1
+pydantic_core==2.16.2
+pyflakes==3.2.0
+PyGetWindow==0.0.9
+Pygments==2.19.2
+PyGObject==3.42.1
+pyinotify==0.9.6
+PyJWT==2.10.1
+pymacaroons==0.13.0
+pymongo==4.15.1
+PyMsgBox==2.0.1
+PyNaCl==1.5.0
+pyparsing==2.4.7
+pyperclip==1.9.0
+PyRect==0.2.0
+pyRFC3339==1.1
+pyrsistent==0.18.1
+PyScreeze==1.0.1
+pytest==8.0.0
+pytest-asyncio==0.23.5
+pytest-cov==4.1.0
+pytest-env==1.1.3
+pytest-xdist==3.5.0
+python-apt==2.4.0+ubuntu4
+python-dateutil==2.9.0.post0
+python-debian==0.1.43+ubuntu1.1
+python-dotenv==1.0.1
+python-jose==3.3.0
+python-multipart==0.0.9
+python-xlib==0.29
+python3-xlib==0.15
+pytweening==1.2.0
+pytz==2022.1
+pyxdg==0.27
+PyYAML==6.0.1
+razorpay==2.0.0
+redis==6.1.0
+reportlab==3.6.8
+requests==2.31.0
+rich==14.1.0
+roman==3.3
+rsa==4.8
+s3transfer==0.10.4
+scikit-learn==1.4.0
+scipy==1.16.1
+SecretStorage==3.3.1
+setuptools==80.9.0
+six==1.16.0
+slowapi==0.1.9
+sniffio==1.3.1
+SQLAlchemy==2.0.27
+ssh-import-id==5.11
+starlette==0.36.3
+stevedore==5.4.1
+stripe==12.5.1
+structlog==24.1.0
+systemd-python==234
+texttable==1.6.4
+threadpoolctl==3.6.0
+types-awscrt==0.27.5
+types-boto3==1.0.2
+types-cffi==1.17.0.20250805
+types-psutil==5.9.5.20240106
+types-pyOpenSSL==24.1.0.20240722
+types-redis==4.6.0.20240106
+types-requests==2.31.0.20240125
+types-s3transfer==0.13.0
+types-setuptools==80.9.0.20250801
+typing_extensions==4.14.1
+tzdata==2025.2
+ubuntu-drivers-common==0.0.0
+ubuntu-pro-client==8001
+ufw==0.36.1
+unattended-upgrades==0.1
+urllib3==2.0.7
+usb-creator==0.3.7
+uvicorn==0.27.1
+uvloop==0.21.0
+wadllib==1.3.6
+watchfiles==1.1.0
+websocket-client==1.2.3
+websockets==15.0.1
+wheel==0.37.1
+wrapt==1.17.2
+xdg==5
+xkit==0.0.0
+zipp==1.0.0
