--- a/user-management-backend/requirements-clean.txt
+++ b/user-management-backend/requirements-clean.txt
@@ -1,4 +1,4 @@
-# FastAPI Backend Production Dependencies
+# FastAPI Backend Dependencies
 # Core FastAPI and ASGI server
 fastapi==0.109.2
 uvicorn==0.27.1
@@ -10,7 +10,7 @@ beanie==2.0.0
 motor==3.7.1
 pymongo==4.15.1
 
-# Database - PostgreSQL (if needed for migrations)
+# Database - PostgreSQL (if needed)
 asyncpg==0.29.0
 psycopg2-binary==2.9.9
 SQLAlchemy==2.0.27
@@ -70,3 +70,18 @@ cryptography==42.0.2
 
 # Utilities
 structlog==24.1.0
+rich==14.1.0
+
+# Testing (development only)
+pytest==8.0.0
+pytest-asyncio==0.23.5
+pytest-cov==4.1.0
+pytest-xdist==3.5.0
+coverage==7.10.2
+
+# Code quality (development only)
+black==24.1.1
+isort==5.13.2
+flake8==7.0.0
+mypy==1.8.0
+bandit==1.7.7
