--- a/user-management-backend/.env.example
+++ b/user-management-backend/.env.example
@@ -16,7 +16,7 @@ JWT_REFRESH_TOKEN_EXPIRE_DAYS=7
 # Application Configuration
 APP_NAME=User Management Backend
 DEBUG=True
-BACKEND_CORS_ORIGINS=["https://codemurf.com","https://www.codemurf.com","http://codemurf.com","http://www.codemurf.com","https://api.codemurf.com","https://extension.codemurf.com","http://extension.codemurf.com"]
+BACKEND_CORS_ORIGINS=["*"]
 
 # A4F Integration Configuration
 A4F_API_KEY=your-a4f-api-key-here
