--- a/user-management-backend/requirements.txt
+++ b/user-management-backend/requirements.txt
@@ -1,72 +1,17 @@
-# FastAPI Backend Production Dependencies
-# Core FastAPI and ASGI server
-fastapi==0.109.2
-uvicorn==0.27.1
-uvloop==0.21.0
-starlette==0.36.3
-
-# Database - MongoDB
-beanie==2.0.0
-motor==3.7.1
-pymongo==4.15.1
-
-# Database - PostgreSQL (if needed for migrations)
-asyncpg==0.29.0
-psycopg2-binary==2.9.9
-SQLAlchemy==2.0.27
-alembic==1.13.1
-
-# Authentication & Security
-PyJWT==2.10.1
-passlib==1.7.4
-bcrypt==5.0.0
-python-jose==3.3.0
-Authlib==1.6.4
-python-multipart==0.0.9
-
-# Data Validation & Serialization
-pydantic==2.6.1
-pydantic-settings==2.2.1
-pydantic_core==2.16.2
-email-validator==2.1.0
-
-# HTTP Client
-httpx==0.28.1
-requests==2.31.0
-
-# Configuration & Environment
-python-dotenv==1.0.1
-
-# Rate Limiting
-redis==6.1.0
-limits==5.4.0
-slowapi==0.1.9
-
-# Payment Processing
-stripe==12.5.1
-razorpay==2.0.0
-
-# AWS Services
-boto3==1.34.34
-botocore==1.34.34
-
-# File Handling
-aiofiles==23.2.1
-
-# Date/Time utilities
-python-dateutil==2.9.0.post0
-
-# Typing extensions
-typing_extensions==4.14.1
-annotated-types==0.7.0
-
-# Async utilities
-anyio==4.10.0
-sniffio==1.3.1
-greenlet==3.2.3
-
-# Cryptography
-cryptography==42.0.2
-
-# Utilities
-structlog==24.1.0
+fastapi>=0.104.0
+uvicorn[standard]>=0.24.0
+motor>=3.3.0
+beanie>=1.24.0
+bcrypt>=4.1.0
+PyJWT>=2.8.0
+python-multipart>=0.0.6
+python-dotenv>=1.0.0
+httpx>=0.25.0
+pydantic[email]>=2.5.0
+pydantic-settings>=2.0.0
+pymongo>=4.6.0
+razorpay>=1.3.0
+redis>=4.5.0
+stripe>=5.0.0
+passlib[bcrypt]>=1.7.4
+setuptools>=68.0.0
