--- a/user-management-backend/Dockerfile
+++ b/user-management-backend/Dockerfile
@@ -18,4 +18,4 @@ EXPOSE 8000
 
 
 # Run the application
-CMD ["uvicorn", "minimal_auth_server:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
