--- a/user-management-backend/requirements.txt
+++ b/user-management-backend/requirements.txt
@@ -13,7 +13,9 @@ pymongo>=4.6.0
 razorpay>=1.3.0
 redis>=4.5.0
 stripe>=5.0.0
-passlib[bcrypt]>=1.7.4
 setuptools>=68.0.0
 python-jose[cryptography]>=3.3.0
 sqlalchemy>=2.0.0
+itsdangerous>=2.1.0
+authlib>=1.2.0
+passlib[bcrypt]>=1.7.4
