--- a/user-management-backend/Dockerfile
+++ b/user-management-backend/Dockerfile
@@ -1,6 +1,9 @@
 # Use a slim Python base image for smaller size
 FROM python:3.12-slim
 
+# Install curl for health checks
+RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/*
+
 # Set the working directory in the container
 WORKDIR /app
 
