--- a/user-management-backend/.env.example
+++ b/user-management-backend/.env.example
@@ -1,32 +1,97 @@
-# User Management Backend Configuration
-# Copy this file to .env and update the values
+# ==============================================
+# User Management Backend - Environment Configuration
+# ==============================================
+# Copy this file to .env and fill in your actual values
+# NEVER commit .env to git!
 
+# ==============================================
+# Application Settings
+# ==============================================
+DEBUG=False
+ENVIRONMENT=production
+APP_NAME=User Management Backend
+HOST=0.0.0.0
+PORT=8000
+
+# ==============================================
 # Database Configuration
-DATABASE_URL=mongodb://localhost:27017/codemurf_db
-MONGODB_URL=mongodb://localhost:27017
-MONGODB_DB_NAME=codemurf_db
-REDIS_URL=redis://localhost:6379
+# ==============================================
+DATABASE_URL=mongodb://mongodb:27017/user_management_db
+MONGODB_URL=mongodb://mongodb:27017
+MONGODB_DB_NAME=user_management_db
+REDIS_URL=redis://redis:6379
 
-# JWT Configuration
-JWT_SECRET_KEY=your-super-secret-jwt-key-change-this-in-production
+# ==============================================
+# Security & Authentication
+# ==============================================
+# Generate a strong secret key: openssl rand -hex 32
+JWT_SECRET_KEY=CHANGE_THIS_TO_A_SECURE_RANDOM_STRING
 JWT_ALGORITHM=HS256
 JWT_ACCESS_TOKEN_EXPIRE_MINUTES=30
 JWT_REFRESH_TOKEN_EXPIRE_DAYS=7
 
-# Application Configuration
-APP_NAME=User Management Backend
-DEBUG=True
-BACKEND_CORS_ORIGINS=["*"]
+# ==============================================
+# Clerk Authentication (Frontend Token Verification)
+# ==============================================
+# Get these from: https://dashboard.clerk.com
+CLERK_JWKS_URL=https://your-clerk-instance.clerk.accounts.dev/.well-known/jwks.json
+CLERK_ISSUER=https://your-clerk-instance.clerk.accounts.dev
+CLERK_AUDIENCE=https://your-production-domain.com
+CLERK_JWKS_TTL=300
+CLERK_SECRET_KEY=
 
-# A4F Integration Configuration
-A4F_API_KEY=your-a4f-api-key-here
+# ==============================================
+# External API Keys
+# ==============================================
+A4F_API_KEY=your-a4f-api-key
 A4F_BASE_URL=https://api.a4f.com/v1
 
-# Server Configuration
-HOST=0.0.0.0
-PORT=8000
+# ==============================================
+# OAuth Provider Configuration
+# ==============================================
+# Google OAuth: https://console.cloud.google.com/apis/credentials
+GOOGLE_CLIENT_ID=your-google-client-id
+GOOGLE_CLIENT_SECRET=your-google-client-secret
+GOOGLE_REDIRECT_URI=https://your-domain.com/api/auth/google/callback
 
-# Optional: Stripe Configuration (for payments)
-STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key
-STRIPE_PUBLISHABLE_KEY=pk_test_your_stripe_publishable_key
+# GitHub OAuth: https://github.com/settings/developers
+GITHUB_CLIENT_ID=your-github-client-id
+GITHUB_CLIENT_SECRET=your-github-client-secret
+
+# OpenRouter OAuth
+OPENROUTER_CLIENT_ID=your-openrouter-client-id
+OPENROUTER_CLIENT_SECRET=your-openrouter-client-secret
+
+# ==============================================
+# Stripe Payment Configuration
+# ==============================================
+STRIPE_SECRET_KEY=sk_live_your_stripe_secret_key
+STRIPE_PUBLISHABLE_KEY=pk_live_your_stripe_publishable_key
 STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret
+
+# ==============================================
+# CORS Configuration
+# ==============================================
+# JSON array format: ["https://domain1.com","https://domain2.com"]
+BACKEND_CORS_ORIGINS=["https://your-frontend-domain.com"]
+
+# ==============================================
+# AWS Configuration (for EC2 deployment)
+# ==============================================
+AWS_REGION=us-east-1
+AWS_ACCESS_KEY_ID=your-aws-access-key
+AWS_SECRET_ACCESS_KEY=your-aws-secret-key
+
+# ==============================================
+# IMPORTANT: GLM API Key Storage
+# ==============================================
+# User GLM API keys are stored in MongoDB (User.glm_api_key field)
+# NOT in environment variables!
+#
+# Users set their keys via:
+#   POST /api/users/me/glm-api-key?api_key=<their_key>
+#
+# Keys are returned in user profile:
+#   GET /api/users/me
+#   Response: { "glm_api_key": "ghp_...", ... }
+
