--- a/user-management-backend/docker-compose.production.yml
+++ b/user-management-backend/docker-compose.production.yml
@@ -1,34 +1,78 @@
-# Production Docker Compose Configuration
+# Production Docker Compose Configuration for EC2
 version: '3.8'
 
 services:
-  user-management-backend:
+  # User Management Backend API
+  api:
     build:
       context: .
       dockerfile: Dockerfile
     ports:
       - "8000:8000"
+    env_file:
+      - .env  # Load from .env file (not committed to git)
     environment:
       - ENVIRONMENT=production
-    env_file:
-      - .env.production
+      - DEBUG=False
     restart: unless-stopped
     depends_on:
+      - mongodb
       - redis
     networks:
       - app-network
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
 
-  redis:
-    image: redis:7-alpine
-    ports:
-      - "6379:6379"
-    restart: unless-stopped
-    command: redis-server --appendonly yes
+  # MongoDB Database
+  mongodb:
+    image: mongo:8.0
+    environment:
+      - MONGO_INITDB_DATABASE=user_management_db
     volumes:
-      - redis-data:/data
+      - mongodb_data:/data/db
+    restart: unless-stopped
     networks:
       - app-network
+    healthcheck:
+      test: ["CMD", "mongosh", "--eval", "db.adminCommand('ping')"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
 
+  # Redis Cache
+  redis:
+    image: redis:7-alpine
+    command: redis-server --appendonly yes --requirepass ${REDIS_PASSWORD:-changeme}
+    volumes:
+      - redis_data:/data
+    restart: unless-stopped
+    networks:
+      - app-network
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
+
+  # Nginx Reverse Proxy (Optional - for SSL/HTTPS)
   nginx:
     image: nginx:alpine
     ports:
@@ -37,14 +81,24 @@ services:
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
       - ./ssl:/etc/nginx/ssl:ro
+      - ./certbot/conf:/etc/letsencrypt:ro
+      - ./certbot/www:/var/www/certbot:ro
     depends_on:
-      - user-management-backend
+      - api
     restart: unless-stopped
     networks:
       - app-network
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
 
 volumes:
-  redis-data:
+  mongodb_data:
+    driver: local
+  redis_data:
+    driver: local
 
 networks:
   app-network:
