--- a/user-management-backend/docker-compose.yml
+++ b/user-management-backend/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: "3.8"
 
 services:
   # User Management Backend API
@@ -7,7 +7,7 @@ services:
     ports:
       - "8000:8000"
     environment:
-      - DATABASE_URL=mongodb://mongodb:27017/user_management_db
+      - DATABASE_URL=mongodb+srv://autogencodebuilder:DataOnline@autogen.jf0j0.mongodb.net/user_management_db?retryWrites=true&w=majority&connectTimeoutMS=60000&socketTimeoutMS=60000
       - JWT_SECRET_KEY=${JWT_SECRET_KEY:-your-production-secret-key-change-this}
       - DEBUG=True
       - A4F_API_KEY=${A4F_API_KEY:-your-a4f-api-key}
