--- a/user-management-backend/Dockerfile
+++ b/user-management-backend/Dockerfile
@@ -1,24 +1,21 @@
 # Use a slim Python base image for smaller size
 FROM python:3.12-slim
 
-# Install curl for health checks
-RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/*
+# Install curl AND ca-certificates
+RUN apt-get update && \
+    apt-get install -y curl ca-certificates && \
+    update-ca-certificates && \
+    rm -rf /var/lib/apt/lists/*
 
-# Set the working directory in the container
 WORKDIR /app
 
-# Copy the requirements file and install dependencies
-# This step is cached if requirements.txt doesn't change
 COPY requirements.txt .
 RUN pip install --no-cache-dir --upgrade pip setuptools wheel
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy the rest of your application code
 COPY . .
 
-# Expose the port your FastAPI application will listen on
 EXPOSE 8000
 
-
-# Run the application
 CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
+
