--- a/user-management-backend/docker-compose.production.yml
+++ b/user-management-backend/docker-compose.production.yml
@@ -1,5 +1,5 @@
 # Production Docker Compose Configuration for EC2
-version: '3.8'
+version: "3.8"
 
 services:
   # User Management Backend API
@@ -10,7 +10,7 @@ services:
     ports:
       - "8000:8000"
     env_file:
-      - .env  # Load from .env file (not committed to git)
+      - .env.production # Load from .env.production file for production
     environment:
       - ENVIRONMENT=production
       - DEBUG=False
