--- a/user-management-backend/docker-compose.yml
+++ b/user-management-backend/docker-compose.yml
@@ -53,18 +53,14 @@ services:
       timeout: 3s
       retries: 3
 
-  # ngrok for local webhook testing (optional - comment out in production)
-  ngrok:
-    image: ngrok/ngrok:latest
-    restart: unless-stopped
-    command:
-      - "http"
-      - "api:8000"
-      - "--log=stdout"
-    ports:
-      - "4040:4040"  # ngrok web interface
-    depends_on:
-      - api
+  # NOTE: ngrok removed - only needed for local development, not production
+  # If you need ngrok for local testing, uncomment:
+  # ngrok:
+  #   image: ngrok/ngrok:latest
+  #   restart: unless-stopped
+  #   command: ["http", "api:8000", "--log=stdout"]
+  #   ports: ["4040:4040"]
+  #   depends_on: [api]
 
 volumes:
   mongodb_data:
